--- a/src/pages/productDetail/ProductDetail.module.css
+++ b/src/pages/productDetail/ProductDetail.module.css
@@ -151,6 +151,7 @@
     height: 48px;
     margin-bottom: 68px;
     & a{
+        cursor: pointer;
         padding: 18px 80px;
         border: #B88E2F 1px solid;
         width: 245px;
